--- a/css/app.css
+++ b/css/app.css
@@ -5,6 +5,7 @@
    Base styles: opinionated defaults
    ========================================================================== */
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:500");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:500");
 html {
   color: #222;
   font-size: 1em;
@@ -591,6 +592,44 @@ nav {
     float: left; }
   .property div.infoGroup1 p {
     display: inline; }
+
+/* ==========================================================================
+   Buyer's Details
+   ========================================================================== */
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'icon-font';
+  font-weight: normal;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  speak: none;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+@font-face {
+  font-family: fontName;
+  font-weight: normal;
+  font-style: normal;
+  src: url("path/to/font.woff") format("woff"); }
+
+/*----*/
+@font-face {
+  font-family: SourceSansPro;
+  /*IE9 Compat Modes*/
+  src: url("https://fonts.googleapis.com/css?family=Source+Sans+Pro.eot");
+  /*IE6-IE8*/
+  src: url("https://fonts.googleapis.com/css?family=Source+Sans+Pro.eot?#iefix") format("embedded-opentype"), url("https://fonts.googleapis.com/css?family=Source+Sans+Pro.woff") format("woff"), url("https://fonts.googleapis.com/css?family=Source+Sans+Proe.ttf") format("truetype"), url("https://fonts.googleapis.com/css?family=Source+Sans+Pro.svg#SourceSansPro") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+.buyers_details {
+  border: 1px solid #800080; }
+  .buyers_details h1 {
+    float: left; }
+  .buyers_details a {
+    float: right; }
 
 /* ==========================================================================
    Author's custom styles
