html structure of reopen negotiations added, footer markup added

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -4,7 +4,7 @@
 //main partials
 @import "base";
 @import "helper";
-@import "yarboroughGrid";
+@import "purpleGrid";
 
 //module partials
 @import "./header_module/_base";
@@ -20,7 +20,7 @@
 
 
 /* ==========================================================================
-   Author's custom styles
+   Custom styles
    ========================================================================== */
 
 
