--- a/app/css/_base.scss
+++ b/app/css/_base.scss
@@ -8,6 +8,10 @@ html {
     line-height: 1.4;
 }
 
+html, body {
+    height: 100%;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
